# AgentTorch

./: .gitignore  .gitmodules  404.html  =2.1.2  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  Latest_omega_config_Epi.yaml  Latest_omega_config_opdyn.yaml  Outline_and_todos.txt  Quickstart_LPMs.ipynb  README.md  Test_Learnable.ipynb  __init__.py  age.pickle  all_nta_agents.npy  change_log.txt  citation.bib  citation.cff  config.py  config_v2.py  contributing.md  controller.py  custom_population.py  debug_env.py  debug_gradient.py  debug_learning.py  debugging.py  demo_abm_scm.py  demo_abm_scm_svi.py  development.txt  education.pickle  employment_insurance.pickle  ethnicity.pickle  example.py  example_new_api.py  example_v2.py  example_v3.py  exp.py  gender.pickle  (+31 more)
.github/workflows/: pages.yaml  release.yaml  tests.yaml
AgentTorch/: README.md  __init__.py  config.py  config_generator_test.ipynb  controller.py  initializer.py  optimizer.py  registry.py  requirements.txt  runner.py  substep.py  utils.py
AgentTorch/AgentTorch/: __init__.py  config.py  controller.py  dataloader.py  initializer.py  initializer_debug.py  runner.py  (+3 more)
agent_torch/: __init__.py  config.py  controller.py  dataloader.py  executor.py  initializer.py  registry.py  runner.py  substep.py  utils.py  visualize.py
analyze_performance/: perf-astoria-cuda-vs-cpu.md
architecture/: index.html
contributing/: index.html
data/: 25011_age.csv  README.md
debug/: config_covid.ipynb  config_generator_test.ipynb  config_opdyn.ipynb
docs/: README.md  architecture.md  code-of-conduct.md  contributing.md  create.md  distributed_simulation.md  index.md  install.md
examples/: README.md
experiments/: requirements.txt
install/: index.html
make_config_demos/: config_nca.ipynb
models/: tutorial.ipynb  tutorial.py
scratch/: population.csv  san_pop.ipynb
search/: search_index.json
simulator_data/: census_loader.py  use_dataloader.ipynb
tests/: test_behavior.py  test_config.py  test_dataloader.py  test_executor.py  test_initializer.py  test_masked_tensor.py  test_p3o_integration.py  test_p3o_optimizes_template.py  test_vmap_substeps.py
tracker/: README.md  tasks.txt
tutorials/: index.html  utils.py
utils/: __init__.py  general.py
(+973 files in other folders)
