[project]
name = "agent_torch"
version = "0.6.0"
description = "large population models"
readme = "readme.md"
license = {text = "MIT"}
authors = [
    {name = "Ayush Chopra"},
]
maintainers = [
    {name = "Ayush Chopra"},
    {name = "Vedant Kulkarni"}
]
requires-python = ">= 3.8"
dependencies = [
    "numpy>=1.24.3",
    "pandas>=1.5.0",
    "torch>=2.1.2",
    "torch_geometric>=2.5.3",
    "omegaconf>=2.3.0",
    "asyncio>=3.4.3",
    "langchain>=0.2.3",
    "langchain-openai>=0.1.8",
    "networkx>=3.0",
    "tqdm>=4.66.4",
    "dspy>=0.1.5",
    "dask>=2024.12.1"
]

[project.urls]
Homepage = "https://lpm.media.mit.edu/docs"
Issues = "https://github.com/AgentTorch/AgentTorch/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["populations", "models"]

[tool.bumpver]
current_version = "0.6.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: {old_version} -> {new_version}"
tag_scope = "default"
tag_message = "v{new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"agent_torch/core/version.py" = [
    '^__version__ = "{version}"$',
]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
